# ComputerWars

./: .clang-format  .gitignore  BaseCode.vcxproj  BaseCode.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CWM Format Specification.md  CWM Format Specification.txt  ComputerWars.sln  Doxyfile  Doxyfile.ini  LICENSE  README.md  fix-0.9.patch  git-bash-ComputerWars.lnk  macgen.cpp  macgen.py  main.cpp  main_test.cpp  test.txt
assets/: config.json  core.json  properties.json  scripts.json  settings.json  terrain.json  test-scripts.json
awe/: CMakeLists.txt  army.cpp  army.h  army_pane.cpp  army_pane.h  army_pane.hpp  bank.cpp  bank.h  bank.hpp  dialogue.cpp  dialogue.h  dialogue.hpp  engine.cpp  engine.h  engine.hpp  game.cpp  game.h  game.hpp  map.cpp  map.h  spritesheets.cpp  spritesheets.h  spritesheets.hpp  tile.cpp  tile.h  tile_pane.cpp  tile_pane.h  tile_pane.hpp  typedef.cpp  typedef.h  typedef.hpp  unit.cpp  unit.h  unit.hpp  unit_pane.cpp  unit_pane.h  unit_pane.hpp
awe/include/: animated_map.hpp  animated_tile.hpp  animated_unit.hpp  animation.hpp  army.hpp  bank-v2.hpp  bank.hpp  damage_sprite.hpp  dialogue.hpp  engine.hpp  fmtawe.hpp  game.hpp  map.hpp  mapstrings.hpp  options.hpp  random_particles.hpp  settings.hpp  spritesheets.hpp  tile.hpp  tile_pane.hpp  transitions.hpp  typedef.hpp  unit.hpp  unit_pane.hpp
awe/include/animation/: daybegin.hpp  transitions.hpp
awe/include/tpp/: bank-v2-macros.tpp  bank.tpp  dialogue.tpp  engine.tpp
awe/source/: animated_map.cpp  animated_tile.cpp  animated_unit.cpp  army.cpp  army_pane.cpp  bank-v2.cpp  bank.cpp  damage_sprite.cpp  dialogue.cpp  engine.cpp  game.cpp  map.cpp  mapstrings.cpp  options.cpp  random_particles.cpp  settings.cpp  spritesheets.cpp  tile.cpp  tile_pane.cpp  transitions.cpp  typedef.cpp  unit.cpp
awe/source/animation/: animation.cpp  daybegin.cpp  transitions.cpp
awe/source/map/: map.cpp  maparmy.cpp  mapgraphics.cpp  mapmap.cpp  mapregisterinterface.cpp  maptile.cpp  mapunit.cpp
awe/source/map/animations/: animations.hpp
awe/source/map/animations/include/: capture.hpp  daybegin.hpp  delay.hpp  labelunit.hpp  launchorstrike.hpp  moveunit.hpp  nextturn.hpp  scroll.hpp  tagcos.hpp  tileparticle.hpp  tileparticles.hpp  zoom.hpp
awe/source/map/animations/source/: capture.cpp  daybegin.cpp  labelunit.cpp  launchorstrike.cpp  moveunit.cpp  nextturn.cpp  scroll.cpp  tagcos.cpp  tileparticle.cpp  tileparticles.cpp  zoom.cpp
component/: Printing.cpp  Printing.hpp  PrintingTests.cpp
doc/: Personal Code Base.hnd
engine/: CMakeLists.txt  dialogue.cpp  dialogue.h  file.cpp  file.h  file.hpp  file.tpp  gui.cpp  gui.h  language.cpp  language.h  language.hpp  logger.cpp  logger.h  logger.hpp  logger.tpp  safejson.cpp  safejson.h  safejson.hpp  script.cpp  script.h  script.hpp  script.tpp  uuid.h
engine/include/: binary.hpp  file.hpp  fmtengine.hpp  language.hpp  logger.hpp  maths.hpp  observer.hpp  resourcepool.hpp  safejson.hpp  script.hpp
engine/include/tpp/: binary.tpp  file.tpp  language.tpp  logger.tpp  pod.tpp  resourcepool.tpp  safejson.tpp  script.tpp
engine/source/: binary.cpp  file.cpp  language.cpp  logger.cpp  maths.cpp  safejson.cpp  script.cpp
file/: File.cpp  File.hpp  FileTests.cpp  file.hpp
gui-builder/: GuiBuilderState.txt
helper/: Types.hpp
include/: army.fwd.h  army.h  audio.h  bank.h  dialogue.h  engine.h  file.h  fonts.h  game.h  game_OLD.h  gui.h  language.h  logger.h  map.h  property.h  renderer.h  safejson.h  script.h  spritesheets.h  terrain.fwd.h  terrain.h  texture.h  tile.h  transitions.h  typedef.h  unit.fwd.h  unit.h  userinput.h  uuid.h
log/: Formatters.hpp  Log.cpp  Log.hpp  ShutdownCodes.hpp  TestHelpers.hpp
maths/: Maths.hpp
mvc/: ChildController.cpp  ChildController.hpp  Command.hpp  Controller.cpp  Controller.hpp  ControllerNode.hpp  Event.hpp  JSONSerialised.hpp  MVCTests.cpp  Model.hpp  Query.hpp  Request.hpp  RootController.cpp  RootController.hpp  View.hpp
python/: gameproperty.cpp  gamepropertyheader.cpp  macgen.py  pod.cpp  (+1 more)
sfx/: CMakeLists.txt  audio.cpp  audio.h  audio.hpp  fmtformatter.h  fmtformatter.hpp  fonts.cpp  fonts.h  fonts.hpp  gui.cpp  gui.h  gui.hpp  gui.tpp  renderer.cpp  renderer.h  renderer.hpp  script.cpp  script.h  texture.cpp  texture.h  texture.hpp  userinput.cpp  userinput.h  userinput.hpp
sfx/include/: audio.hpp  fmtformatter.hpp  fmtsfx.hpp  fonts.hpp  gui.hpp  hash.hpp  renderer.hpp  texture.hpp  userinput.hpp
sfx/include/gui/: menu.hpp  menumanager.hpp
sfx/include/tpp/: gui.tpp  userinput.tpp
sfx/source/: audio.cpp  fonts.cpp  gui.cpp  guimacros.hpp  renderer.cpp  texture.cpp  userinput.cpp
sfx/source/gui/: gui.cpp  guiconstants.hpp  guimacros.hpp  guiregisterinterface.cpp  guiscriptinterface.cpp  guisignalhandlers.cpp  menu.cpp  menumanager.cpp  registerinterface.cpp
test/: CMakeLists.txt  armytest.cpp  audiotest.cpp  banktest.cpp  converttest.cpp  drawabletest.cpp  expandstringtest.cpp  filetest.cpp  fontstest.cpp  guitest.cpp  joysticktest.cpp  jsontest.cpp  languagetest.cpp  loggertest.cpp  maptest.cpp  renderertest.cpp  scripttest.cpp  sharedfunctions.cpp  sharedfunctions.h  sharedfunctions.hpp  sinktest.cpp  test.cpp  test.h  tests.cpp  tests.h  texturetest.cpp  tiletest.cpp  transitiontest.cpp  unittest.cpp  userinputtest.cpp
test/assets/audio/: audio.json  faultyaudio.json
test/assets/bank/: move.json  unit.json
test/assets/fonts/: fonts.json  fonts_save.json  otherfonts.json
test/assets/gui/: bad.json  eng.json  form.txt  gib.json  good.json  lang.json
test/assets/gui/scripts/: menu.as
test/assets/lang/: ENG_GB.json  GER_DE.json  lang.json
test/assets/renderer/: faultyrenderer.json  renderer.json
test/assets/script/: test.as
test/assets/script2/: test.as
test/assets/sprites/: ani.json  faultysheet.json  multi.json  sheet.json
test/assets/ui/: faultyui.json  ui.json
test/engine/: sinktest.cpp
transition/: CMakeLists.txt  transitions.cpp  transitions.h  transitions.hpp
transition/include/: transitions.hpp
transition/source/: transitions.cpp
(+297 files in other folders)
